force-app/main/default/objects/SQX_Bulk_Job_Manager__c/SQX_Bulk_Job_Manager__c.object-meta.xml
<CustomObject>
    <label>Bulk Job Manager</label>
    <nameField>
        <displayFormat>Job-{000}-{YYYY}{MM}{DD}</displayFormat>
        <label>Bulk Job Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Jobs Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>