force-app/main/default/objects/SQX_Bulk_Job_Manager__c/fields/SQX_Bulk_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>SQX_Bulk_Job_Id__c</fullName>
    <label>Bulk Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>