force-app/main/default/objects/SQX_Bulk_Job_Manager__c/fields/SQX_Bulk_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>SQX_Bulk_Job_Status__c</fullName>
    <label>Bulk Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>