force-app/main/default/objects/SQX_Bulk_Job_Manager__c/fields/SQX_Closed__c.field-meta.xml
<CustomField>
    <fullName>SQX_Closed__c</fullName>
    <formula>SQX_Bulk_Job_Status__c == &apos;JobComplete&apos;</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>