force-app/main/default/objects/SQX_Bulk_Job_Manager__c/fields/SQX_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SQX_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>