force-app/main/default/objects/SQX_Bulk_Job_Manager__c/fields/SQX_Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>SQX_Records_Failed__c</fullName>
    <label># Records Failed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>