force-app/main/default/objects/SQX_Bulk_Job_Manager__c/fields/SQX_Records_Success__c.field-meta.xml
<CustomField>
    <fullName>SQX_Records_Success__c</fullName>
    <label># Records Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>