force-app/main/default/objects/SQX_Bulk_Job_Manager__c/fields/SQX_Track_Job_Status_Real_Time__c.field-meta.xml
<CustomField>
    <fullName>SQX_Track_Job_Status_Real_Time__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/setup/AsyncApiJobStatus/page?address=%2F&apos;&amp;SQX_Bulk_Job_Id__c, &apos;Click Here&apos;)</formula>
    <label>Track Job Status Real Time</label>
    <type>Text</type>
</CustomField>