force-app/main/default/objects/SQX_Bulk_Job_Manager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SQX_Bulk_Job_Id__c</columns>
    <columns>SQX_Bulk_Job_Status__c</columns>
    <columns>SQX_Closed__c</columns>
    <columns>SQX_Records_Processed__c</columns>
    <columns>SQX_Records_Success__c</columns>
    <columns>SQX_Records_Failed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>